# steeleye-firds-parser

./: README.md  main.py  pyproject.toml
src/firds_parser/: base_storage.py  config.py  firds_parser.py  fsspec_storage.py  http_downloader.py  main.py  registry_parser.py  utils.py
tests/unit/: test_firds_parser.py  test_fsspec_storage.py  test_http_downloader.py  test_registry_parser.py  test_utils.py
