[project]
name = "steeleye-firds-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "adlfs>=2026.4.0",
    "boto3>=1.42.92",
    "defusedxml>=0.7.1",
    "fsspec>=2026.3.0",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "s3fs>=0.4.2",
    "tenacity>=9.1.4",
    "xmltodict>=1.0.4",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "moto>=5.1.22",
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.11",
    "types-requests>=2.33.0.20260408",
]


[tool.ruff]
line-length = 100
target-version = "py313"   # ruff may not have py314 yet — py313 is safe

[tool.black]
line-length = 100
target-version = ["py313"]   # same reason

[tool.mypy]
python_version = "3.14"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
